# practice-boto3

./: manage.py  pyproject.toml
practice_boto3/: asgi.py  settings.py  urls.py  wsgi.py
